# courier-http

./: .gitignore  Deployment.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.js  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collections.rs  environments.rs  history.rs  http.rs  mod.rs
src-tauri/src/models/: collection.rs  environment.rs  history.rs  request.rs  response.rs
src-tauri/src/storage/: fs.rs
src/__tests__/hooks/: useRequestSend.test.ts
src/__tests__/lib/: utils.test.js  utils.test.ts
src/__tests__/store/: collectionStore.test.js  collectionStore.test.ts  environmentStore.test.js  environmentStore.test.ts  historyStore.test.js  historyStore.test.ts  requestStore.test.js  requestStore.test.ts
src/components/layout/: StatusBar.js  StatusBar.tsx  TabBar.js  TabBar.tsx
src/components/request/: AuthTab.js  AuthTab.tsx  BodyTab.js  BodyTab.tsx  HeadersTab.js  HeadersTab.tsx  ParamsTab.js  ParamsTab.tsx  RequestBuilder.js  RequestBuilder.tsx  (+2 more)
src/hooks/: useRequestSend.js  useRequestSend.ts
src/lib/: interpolate.js  interpolate.test.js  interpolate.test.ts  interpolate.ts  tauri.js  tauri.ts  utils.js  utils.ts
src/store/: collectionStore.js  collectionStore.ts  environmentStore.js  environmentStore.ts  historyStore.js  historyStore.ts  requestStore.js  requestStore.ts
src/types/: index.ts
(+38 files in other folders)
