[package]
name = "courier-http"
version = "0.1.0"
edition = "2021"

[lib]
name = "courier_http_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"

[target.'cfg(debug_assertions)'.dependencies.tauri]
version = "2"
features = ["devtools"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
